--- a/CursoHTML5eCSS3/Modulo 1/Aulas/aulaCss/style.css
+++ b/CursoHTML5eCSS3/Modulo 1/Aulas/aulaCss/style.css
@@ -3,13 +3,18 @@
 
 body {
       font-family: Arial, Helvetica, sans-serif;
-      background-color: lightgoldenrodyellow;
+      background-color: blue;
       color: chocolate;
       font-size: 12pt;
 }
 
 h1 {
-      color: brown;
+      background-color: beige;
+      color: rgb(64, 134, 67);
+}
+
+p {
+      text-align: justify;
 }
 
 a {
